--- a/src/view/Bovin.fxml
+++ b/src/view/Bovin.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="901.0" prefWidth="1086.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BovinController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BovinController">
    <children>
-      <Pane fx:id="paneImportRace" prefHeight="901.0" prefWidth="1083.0">
+      <Pane fx:id="paneImportRace" prefHeight="800.0" prefWidth="900.0">
          <children>
-            <AnchorPane layoutX="-3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="901.0" prefWidth="1086.0">
+            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0">
                <children>
-                  <Pane fx:id="PaneInfo" layoutX="226.0" layoutY="95.0" prefHeight="654.0" prefWidth="634.0" style="-fx-background-color: #EBEBF9;">
+                  <Pane fx:id="PaneInfo" layoutX="133.0" layoutY="81.0" prefHeight="654.0" prefWidth="634.0" style="-fx-background-color: #EBEBF9;">
                      <children>
                         <HBox alignment="CENTER" layoutX="-2.0" prefHeight="88.0" prefWidth="636.0">
                            <children>
